# n8n-strix-agentic-hub

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  llm.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/core/: exceptions.py  settings.py
backend/src/lib/: json_extractor.py  telegram_normalizer.py
backend/src/models/: __init__.py  llm.py  report.py
backend/src/prompts/: report_brief.md
backend/src/routes/: health.py  reports.py
backend/src/services/: health_service.py  report_service.py
backend/src/tools/: __init__.py  artifact_store.py  email_sender.py  llm_chat.py  markdown_renderer.py  pdf_renderer.py  prompt_loader.py  source_fetcher.py
backend/tests/: conftest.py  test_app_factory.py  test_email_sender.py  test_health_service.py  test_json_extractor.py  test_markdown_renderer.py  test_telegram_normalizer.py
frontend/: package-lock.json  package.json
n8n/workflows/: README.md
n8n/workflows/active/: report-request-webhook.json  telegram-report-webhook.json
ollama/: Dockerfile  entrypoint.sh
scripts/: bootstrap-local-dirs.sh  n8n-activate-workflows.sh  n8n-export-workflows.sh  n8n-import-workflows.sh  register-telegram-webhook.sh  start-stack.sh  test-mailpit.sh  test-n8n-health.sh  test-ollama.sh  test-report-service.sh  test-report-webhook.sh  test-telegram-report-webhook.sh
